--- a/.github/workflows/commitlint.yml
+++ b/.github/workflows/commitlint.yml
@@ -11,7 +11,7 @@ jobs:
           fetch-depth: 0
       - name: Install required dependencies
         run: |
-          apt update
+          sudo apt update
           apt install -y sudo
           sudo apt install -y git curl
           curl -sL https://deb.nodesource.com/setup_14.x | sudo -E bash -
