--- a/package.json
+++ b/package.json
@@ -22,8 +22,8 @@
     "@commitlint/config-conventional": "^19.5.0",
     "@eslint/js": "^9.10.0",
     "@types/eslint__js": "^8.42.3",
-    "@typescript-eslint/parser": "^8.5.0",
     "@vitejs/plugin-vue": "^5.1.3",
+    "@vue/tsconfig": "^0.5.1",
     "concurrently": "^9.0.1",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
@@ -37,6 +37,7 @@
     "vite": "^5.4.5",
     "vite-plugin-html": "^3.2.2",
     "vite-plugin-vue-devtools": "^7.4.5",
+    "vue-eslint-parser": "^9.4.3",
     "vue-tsc": "^2.1.6"
   },
   "packageManager": "pnpm@9.10.0"
