--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "concurrently": "^9.0.1",
     "eslint": "^9.10.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.28.0",
     "prettier": "^3.3.3",
     "sass-embedded": "^1.78.0",
