--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lint": "conc \"lint:prettier && lint:eslint && lint:stylelint\""
   },
   "dependencies": {
+    "chart.js": "^4.4.4",
     "vue": "^3.5.5",
+    "vue-chartjs": "^5.3.1",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
