--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-vue": "^9.28.0",
+    "naive-ui": "^2.39.0",
     "prettier": "^3.3.3",
     "sass-embedded": "^1.78.0",
     "stylelint": "^16.9.0",
